# nakoscope

./: .gitignore  README.md  install.sh  uninstall.sh
app/: cli.py  requirements.txt
app/core/: config.py  device.py  recorder.py  storage.py
app/core/backends/: hdf5.py  s3.py
app/core/devices/: vds1022.py
capture/: Cargo.toml
capture/src/: main.rs
mcp/: install.sh  pyproject.toml  requirements.txt  server.py
