[project]
name = "nakoscope-mcp"
version = "0.1.0"
description = "MCP server for reading nakoscope captures from the HDF5 datastore"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "h5py>=3.10",
    "numpy>=1.24",
]

[project.optional-dependencies]
s3 = ["boto3>=1.34"]

[project.scripts]
nakoscope-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
